--- a/public/css/poststyle.css
+++ b/public/css/poststyle.css
@@ -78,6 +78,14 @@ video.post-video,
     min-width: 0;
 }
 
+.title-control{
+    height: 30px;
+    border: 1px solid #ccc;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+    margin: 7px ;
+    min-width: 0;
+}
+
 img.profile-photo-md {
     height: 50px;
     width: 50px;
